# charge-cheapest

./: .gitignore  README.md  hacs.json  info.md  project-notes.md  pyproject.toml
.claude/commands/agent-os/: spec-and-implement.md
.claude/plugins/local/done-hook/: plugin.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: hacs.yaml
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/2026-01-07-blueprint-configuration-schema/: spec.md  tasks.md
agent-os/specs/2026-01-07-evening-peak-configuration/: spec.md  tasks.md
blueprints/automation/: charge_cheapest.yaml
custom_components/charge_cheapest/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  dashboard.py  manifest.json  sensor.py  services.yaml
custom_components/tibber_cheapest_charging/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  dashboard.py  manifest.json  sensor.py  services.yaml
dashboards/: charge_cheapest.yaml
tests/: conftest.py  test_blueprint_foundation.py  test_blueprint_schema_extension.py  test_day_schedule.py  test_entity_selection.py  test_evening_peak.py  test_forecast_mode.py  test_forecast_mode_integration.py  test_integration.py  test_internal_config.py  test_mode_aware_charging.py  test_night_schedule.py  test_recommendation_sensor.py
tests/integration/: conftest.py  test_config_flow.py  test_coordinator.py  test_dashboard.py  test_end_to_end.py  test_entities.py  test_hacs_validation.py  test_integration_loading.py
tibber_prices/: tibber_price_service.py
(+52 files in other folders)
